--- a/5b.html
+++ b/5b.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JustClick Option 5 - Playful & Whimsical</title>
+    <title>JustClick Option 5B - Playful & Whimsical</title>
     <style>
         * {
             margin: 0;
@@ -744,7 +744,7 @@
         <div class="floating-element">🎪</div>
     </div>
 
-    <div class="option-badge">OPTION 5</div>
+    <div class="option-badge">OPTION 5B</div>
 
     <!-- Header -->
     <header>
