--- a/5b.html
+++ b/5b.html
@@ -749,7 +749,7 @@
     <!-- Header -->
     <header>
         <nav class="container">
-            <div class="logo">[Insert JustClick Logo Here]</div>
+            <div class="logo"><img src="assets/images/logo.png" alt="JustClick Logo" style="height: 100%; width: auto;"></div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -855,21 +855,21 @@
             <h2 class="section-title">Meet Our Super Teachers! 👩‍🏫</h2>
             <div class="team-grid">
                 <div class="team-card">
-                    <div class="team-photo">[Insert Photo]</div>
-                    <h3>Miss Rina</h3>
+                    <div class="team-photo"><img src="assets/images/rina-photo.jpg" alt="Rina Reinecke" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
+                    <h3>Rina Reinecke</h3>
                     <p><strong>The Amazing Boss Lady! 👑</strong></p>
                     <p>She's been making learning fun for 20+ years and knows everything about helping kids become super smart!</p>
                 </div>
                 <div class="team-card">
-                    <div class="team-photo">[Insert Photo]</div>
-                    <h3>Miss Alida</h3>
-                    <p><strong>The Computer Game Expert! 💻</strong></p>
+                    <div class="team-photo"><img src="assets/images/alida-photo.jpg" alt="Alida vd Kruk" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
+                    <h3>Alida vd Kruk</h3>
+                    <p><strong>Die Een tannie! 💻</strong></p>
                     <p>She knows all the best computer games and activities that make learning feel like playing!</p>
                 </div>
                 <div class="team-card">
-                    <div class="team-photo">[Insert Photo]</div>
-                    <h3>Miss Nadia</h3>
-                    <p><strong>The Super Helper! 🦸‍♀️</strong></p>
+                    <div class="team-photo"><img src="assets/images/nadia-photo.jpg" alt="Nadia Scholtz" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
+                    <h3>Nadia Scholtz</h3>
+                    <p><strong>Die Ander Tannie! 🦸‍♀️</strong></p>
                     <p>She notices what makes each kid special and helps everyone learn in their own amazing way!</p>
                 </div>
             </div>
