--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
         }
 
         .logo {
-            height: 80px;
-            padding: 5px 15px;
+            height: 120px;
+            width: auto;
+            padding: 8px 15px;
             background: white;
             border-radius: 25px;
             display: flex;
@@ -764,7 +765,7 @@
     <!-- Header -->
     <header>
         <nav class="container">
-            <div class="logo"><img src="assets/images/logo.png" alt="JustClick Logo" style="height: 100%; width: auto;"></div>
+            <div class="logo"><img src="assets/images/logo.png" alt="JustClick Logo" style="height: 100px; width: auto;"></div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
