--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
         .floating-element {
             position: absolute;
             font-size: 2rem;
-            opacity: 0.1;
+            opacity: 0.3;
             animation: float 10s linear infinite;
         }
 
@@ -754,10 +754,10 @@
     <div class="floating-elements">
         <div class="floating-element">🎈</div>
         <div class="floating-element">⭐</div>
-        <div class="floating-element">🎨</div>
-        <div class="floating-element">🎯</div>
+        <div class="floating-element">🖥️</div>
+        <div class="floating-element">🖨️</div>
         <div class="floating-element">🧩</div>
-        <div class="floating-element">🎪</div>
+        <div class="floating-element">🖱️</div>
     </div>
 
     <div class="option-badge">OPTION 5B</div>
