--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
         <div class="container">
             <div class="hero-content fade-in">
                 <h1>Fun Learning Adventures!</h1>
-                <p>🌟 Super cool computer games that make learning AMAZING for kids aged 3-6! 🌈</p>
+                <p>🌟 Super cool EDUCATIONAL!!!!! GAMES that make learning AMAZING for kids aged 3-6! 🌈</p>
                 <a href="#contact" class="cta-button">Let's Play & Learn!</a>
             </div>
         </div>
