--- a/index.html
+++ b/index.html
@@ -782,6 +782,7 @@
             <div class="hero-content fade-in">
                 <h1>Fun Learning Adventures!</h1>
                 <p>🌟 Super cool EDUCATIONAL!!!!! GAMES that make learning AMAZING for kids aged 3-6! 🌈</p>
+                <p>Bewaar asseblief jou beste panty - hierdie is 'n toets en ALLES (bewoording/uitleg/font/fotos/menus/alles) kan nog verander soos nodig!</p>
                 <a href="#contact" class="cta-button">Let's Play & Learn!</a>
             </div>
         </div>
@@ -846,7 +847,7 @@
                     
                     <h3>🎪 Our Cool Promises:</h3>
                     <ul class="features-list">
-                        <li>Fun computer games that teach you amazing things!</li>
+                        <li>Fun educational games that teach you amazing things!</li>
                         <li>Brand new games every single week - never boring!</li>
                         <li>Small groups of only 5 friends so everyone gets attention</li>
                         <li>Games made just for your age - not too easy, not too hard!</li>
@@ -880,7 +881,7 @@
                     <div class="team-photo"><img src="assets/images/alida-photo.jpg" alt="Alida vd Kruk" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
                     <h3>Alida vd Kruk</h3>
                     <p><strong>Die Een tannie! 💻</strong></p>
-                    <p>She knows all the best computer games and activities that make learning feel like playing!</p>
+                    <p>She knows all the best educational games and activities that make learning feel like playing!</p>
                 </div>
                 <div class="team-card">
                     <div class="team-photo"><img src="assets/images/nadia-photo.jpg" alt="Nadia Scholtz" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
