--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+dd<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
@@ -782,7 +782,7 @@
             <div class="hero-content fade-in">
                 <h1>Fun Learning Adventures!</h1>
                 <p>🌟 Super cool EDUCATIONAL!!!!! GAMES that make learning AMAZING for kids aged 3-6! 🌈</p>
-                <p>Bewaar asseblief jou beste panty - hierdie is 'n toets en ALLES (bewoording/uitleg/font/fotos/menus/alles) kan nog verander soos nodig!</p>
+                <p>Hierdie is net 'n raamwerk, en ALLES kan verander soos nodig (eg. bewoording/uitleg/fonts/fotos/menus/kleure/alles)</p>
                 <a href="#contact" class="cta-button">Let's Play & Learn!</a>
             </div>
         </div>
