--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ dd<!DOCTYPE html>
         }
 
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Comic Sans MS', 'Chalkboard SE','Bradley Hand', sans-serif;
             line-height: 1.6;
             color: #fff;
             background: #1a1a1a;
