--- a/5b.html
+++ b/5b.html
@@ -1,6 +1,16 @@
-<!DOCTYPE html>
+dd<!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JM0D94632F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JM0D94632F');
+</script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JustClick Option 5B - Playful & Whimsical</title>
@@ -66,8 +76,9 @@
         }
 
         .logo {
-            height: 55px;
-            padding: 8px 20px;
+            height: 120px;
+            width: auto;
+            padding: 8px 15px;
             background: white;
             border-radius: 25px;
             display: flex;
@@ -722,7 +733,7 @@
         .floating-element {
             position: absolute;
             font-size: 2rem;
-            opacity: 0.1;
+            opacity: 0.3;
             animation: float 10s linear infinite;
         }
 
@@ -743,10 +754,10 @@
     <div class="floating-elements">
         <div class="floating-element">🎈</div>
         <div class="floating-element">⭐</div>
-        <div class="floating-element">🎨</div>
-        <div class="floating-element">🎯</div>
+        <div class="floating-element">🖥️</div>
+        <div class="floating-element">🖨️</div>
         <div class="floating-element">🧩</div>
-        <div class="floating-element">🎪</div>
+        <div class="floating-element">🖱️</div>
     </div>
 
     <div class="option-badge">OPTION 5B</div>
@@ -754,7 +765,7 @@
     <!-- Header -->
     <header>
         <nav class="container">
-            <div class="logo"><img src="assets/images/logo.png" alt="JustClick Logo" style="height: 100%; width: auto;"></div>
+            <div class="logo"><img src="assets/images/logo.png" alt="JustClick Logo" style="height: 100px; width: auto;"></div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -770,7 +781,8 @@
         <div class="container">
             <div class="hero-content fade-in">
                 <h1>Fun Learning Adventures!</h1>
-                <p>🌟 Super cool computer games that make learning AMAZING for kids aged 3-6! 🌈</p>
+                <p>🌟 Super cool EDUCATIONAL!!!!! GAMES that make learning AMAZING for kids aged 3-6! 🌈</p>
+                <p>Hierdie is net 'n raamwerk, en ALLES kan verander soos nodig (eg. bewoording/uitleg/fonts/fotos/menus/kleure/alles)</p>
                 <a href="#contact" class="cta-button">Let's Play & Learn!</a>
             </div>
         </div>
@@ -835,7 +847,7 @@
                     
                     <h3>🎪 Our Cool Promises:</h3>
                     <ul class="features-list">
-                        <li>Fun computer games that teach you amazing things!</li>
+                        <li>Fun educational games that teach you amazing things!</li>
                         <li>Brand new games every single week - never boring!</li>
                         <li>Small groups of only 5 friends so everyone gets attention</li>
                         <li>Games made just for your age - not too easy, not too hard!</li>
@@ -869,7 +881,7 @@
                     <div class="team-photo"><img src="assets/images/alida-photo.jpg" alt="Alida vd Kruk" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
                     <h3>Alida vd Kruk</h3>
                     <p><strong>Die Een tannie! 💻</strong></p>
-                    <p>She knows all the best computer games and activities that make learning feel like playing!</p>
+                    <p>She knows all the best educational games and activities that make learning feel like playing!</p>
                 </div>
                 <div class="team-card">
                     <div class="team-photo"><img src="assets/images/nadia-photo.jpg" alt="Nadia Scholtz" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
