--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 
         .team-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
             gap: 2rem;
             margin-top: 3rem;
         }
@@ -510,6 +510,10 @@
 
         .team-card:nth-child(3) {
             border-color: #ff9ff3;
+        }
+
+        .team-card:nth-child(4) {
+            border-color: #54a0ff;
         }
 
         .team-card::before {
@@ -552,6 +556,10 @@
 
         .team-card:nth-child(3) .team-photo {
             border-color: #ff9ff3;
+        }
+
+        .team-card:nth-child(4) .team-photo {
+            border-color: #54a0ff;
         }
 
         .team-card h3 {
@@ -971,19 +979,21 @@
                     <div class="team-photo"><img src="assets/images/rina-photo.jpg" alt="Rina Reinecke" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
                     <h3>Rina Reinecke</h3>
                     <p><strong>Founder & Director</strong></p>
-                    <p>Leading JustClick's mission for over 20 years with expertise in perceptual development and educational technology.</p>
                 </div>
                 <div class="team-card">
                     <div class="team-photo"><img src="assets/images/alida-photo.jpg" alt="Alida vd Kruk" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
                     <h3>Alida vd Kruk</h3>
                     <p><strong>Senior Educator</strong></p>
-                    <p>Specialist in age-appropriate educational programs and perceptual skill development.</p>
                 </div>
                 <div class="team-card">
                     <div class="team-photo"><img src="assets/images/nadia-photo.jpg" alt="Nadia Scholtz" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
                     <h3>Nadia Scholtz</h3>
                     <p><strong>Educational Specialist</strong></p>
-                    <p>Expert in identifying and addressing developmental challenges through technology-enhanced learning.</p>
+                </div>
+                <div class="team-card">
+                    <div class="team-photo"><img src="assets/images/susan-photo.jpg" alt="Susan Hogenboezem" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
+                    <h3>Susan Hogenboezem</h3>
+                    <p><strong>Educator</strong></p>
                 </div>
             </div>
         </div>
