--- a/index.html
+++ b/index.html
@@ -991,8 +991,8 @@
                     <p><strong>Educational Specialist</strong></p>
                 </div>
                 <div class="team-card">
-                    <div class="team-photo"><img src="assets/images/susan-photo.jpg" alt="Susan Hogenboezem" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
-                    <h3>Susan Hogenboezem</h3>
+                    <div class="team-photo"><img src="assets/images/random-ai-photo.jpg" alt="Sonja" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
+                    <h3>Susan Van Der Hogenboezem</h3>
                     <p><strong>Educator</strong></p>
                 </div>
             </div>
