--- a/index.html
+++ b/index.html
@@ -98,6 +98,16 @@
             transform: rotate(2deg) scale(1.05);
         }
 
+        .logo.hidden {
+            opacity: 0;
+            transform: rotate(-2deg) scale(0.8);
+            pointer-events: none;
+        }
+
+        .logo {
+            transition: all 0.3s ease;
+        }
+
         .nav-links {
             display: flex;
             list-style: none;
@@ -991,8 +1001,8 @@
                     <p><strong>Educational Specialist</strong></p>
                 </div>
                 <div class="team-card">
-                    <div class="team-photo"><img src="assets/images/random-ai-photo.jpg" alt="Sonja" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
-                    <h3>Susan Van Der Hogenboezem</h3>
+                    <div class="team-photo"><img src="assets/images/random-ai-photo.jpg" alt="Sonja Hogenboezem" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
+                    <h3>Susan Hogenboezem</h3>
                     <p><strong>Educator</strong></p>
                 </div>
             </div>
@@ -1152,6 +1162,20 @@
 
         window.addEventListener('scroll', animateOnScroll);
         animateOnScroll(); // Run once on load
+
+        // Logo hide/show on scroll
+        function handleLogoScroll() {
+            const logo = document.querySelector('.logo');
+            const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+            
+            if (scrollTop > 100) {
+                logo.classList.add('hidden');
+            } else {
+                logo.classList.remove('hidden');
+            }
+        }
+
+        window.addEventListener('scroll', handleLogoScroll);
     </script>
 </body>
 </html>
