--- a/index.html
+++ b/index.html
@@ -86,14 +86,15 @@
         }
 
         header.compact .hamburger {
-            padding: 2px;
-            transform: scale(0.6);
+            padding: 8px;
+            transform: scale(0.8);
         }
 
         header.compact .hamburger span {
-            width: 16px;
-            height: 1px;
-            margin: 2px 0;
+            width: 40px;
+            height: 4px;
+            margin: 4px 0;
+            background: #ff6b6b;
         }
 
         header.compact .logo {
@@ -112,16 +113,23 @@
             display: none;
             flex-direction: column;
             cursor: pointer;
-            padding: 10px;
+            padding: 15px;
+            z-index: 1002;
         }
 
         .hamburger span {
-            width: 25px;
-            height: 3px;
-            background: white;
-            margin: 3px 0;
+            width: 50px;
+            height: 6px;
+            background: #ff6b6b;
+            margin: 6px 0;
             transition: 0.3s;
-            border-radius: 2px;
+            border-radius: 3px;
+            box-shadow: 0 2px 4px rgba(255, 107, 107, 0.3);
+        }
+
+        .hamburger:hover span {
+            background: #ff4757;
+            box-shadow: 0 3px 8px rgba(255, 107, 107, 0.5);
         }
 
         header.compact .nav-links {
@@ -129,7 +137,7 @@
         }
 
         header.compact .hamburger {
-            display: flex;
+            display: flex !important;
         }
 
         .mobile-menu {
@@ -973,6 +981,23 @@
                 display: none;
             }
 
+            .hamburger {
+                display: flex !important;
+            }
+
+            header {
+                padding: 0.5rem 0;
+            }
+
+            header.compact {
+                padding: 0.2rem 0;
+                height: 50px;
+            }
+
+            .hero {
+                padding: 120px 0 80px;
+            }
+
             .hero h1 {
                 font-size: 2.8rem;
             }
@@ -984,6 +1009,13 @@
 
             .areas-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .option-badge {
+                top: 80px;
+                right: 15px;
+                padding: 8px 12px;
+                font-size: 0.8rem;
             }
         }
 
