--- a/index.html
+++ b/index.html
@@ -1120,8 +1120,8 @@
         <div class="floating-element">🖨️</div>
         <div class="floating-element">🧩</div>
         <div class="floating-element">🖱️</div>
-        <div class="floating-element"><img src="/assets/images/bgstar.jpeg" alt="Star"></div>
-        <div class="floating-element"><img src="/assets/images/bgmouse.jpeg" alt="Mouse"></div>
+        <div class="floating-element"><img src="assets/images/bgstar.jpeg" alt="Star"></div>
+        <div class="floating-element"><img src="assets/images/bgmouse.jpeg" alt="Mouse"></div>
     </div>
 
 
