--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <link rel="apple-touch-icon" href="assets/images/favicon.png">
-    
+
     <style>
         * {
             margin: 0;
@@ -1120,8 +1120,8 @@
         <div class="floating-element">🖨️</div>
         <div class="floating-element">🧩</div>
         <div class="floating-element">🖱️</div>
-        <div class="floating-element"><img src="assets/images/bgstar.jpeg" alt="Star"></div>
-        <div class="floating-element"><img src="assets/images/bgmouse.jpeg" alt="Mouse"></div>
+        <div class="floating-element"><img src="assets/images/bgstar.png" alt="Star"></div>
+        <div class="floating-element"><img src="assets/images/bgmouse.png" alt="Mouse"></div>
     </div>
 
 
