--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JustClick | Perceptual Stimulation | Pretoria</title>
    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
-    <link rel="icon" type="image/png" href="./assets/images/favicon.png">
-    <link rel="apple-touch-icon" href="./assets/images/favicon.png">
-
+    <link rel="icon" type="image/x-icon" href="https://atmosphereza.github.io/JustClick/favicon.ico">
+    <link rel="icon" type="image/png" href="https://atmosphereza.github.io/JustClick/favicon.png">
+    <link rel="apple-touch-icon" href="https://atmosphereza.github.io/JustClick/favicon.png">
     <style>
         * {
             margin: 0;
