--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,7 @@
                 <div class="team-card">
                     <div class="team-photo"><img src="assets/images/rina-photo.jpg" alt="Rina Reinecke" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
                     <h3>Rina Reinecke</h3>
-                    <p><strong>Founder & Director</strong></p>
+                    <p><strong>Founder & Owner</strong></p>
                 </div>
                 <div class="team-card">
                     <div class="team-photo"><img src="assets/images/alida-photo.jpg" alt="Alida vd Kruk" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
