--- a/sonja.html
+++ b/sonja.html
@@ -377,18 +377,6 @@
             z-index: 1;
         }
 
-        .floating-element {
-            position: absolute;
-            font-size: 1.5rem;
-            opacity: 0.3;
-            animation: float 12s linear infinite;
-        }
-
-        @keyframes float {
-            0% { transform: translateY(100vh) rotate(0deg); }
-            100% { transform: translateY(-100px) rotate(360deg); }
-        }
-
         .floating-element img {
             width: 2rem;
             height: 2rem;
@@ -414,10 +402,9 @@
         <div class="floating-element">🖨️</div>
         <div class="floating-element">🧩</div>
         <div class="floating-element">🖱️</div>
-        <div class="floating-element"><img src="assets/images/bgstar.png" alt="Star"></div>
-        <div class="floating-element"><img src="assets/images/bgmouse.png" alt="Mouse"></div>
+        <div class="floating-element"><img src="bgstar.jpeg" alt="Star"></div>
+        <div class="floating-element"><img src="bgmouse.jpeg" alt="Mouse"></div>
     </div>
-
 
     <div class="card-container">
         <div class="card-header">
