--- a/sonja.html
+++ b/sonja.html
@@ -402,8 +402,8 @@
         <div class="floating-element">🖨️</div>
         <div class="floating-element">🧩</div>
         <div class="floating-element">🖱️</div>
-        <div class="floating-element"><img src="bgstar.jpeg" alt="Star"></div>
-        <div class="floating-element"><img src="bgmouse.jpeg" alt="Mouse"></div>
+        <div class="floating-element"><img src="bgstar.png" alt="Star"></div>
+        <div class="floating-element"><img src="bgmouse.png" alt="Mouse"></div>
     </div>
 
     <div class="card-container">
