--- a/sonja.html
+++ b/sonja.html
@@ -367,14 +367,17 @@
             box-shadow: 0 8px 25px rgba(78, 205, 196, 0.4);
         }
 
-        .floating-elements {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            z-index: 1;
+        .floating-element {
+            position: absolute;
+            font-size: 2rem;
+            opacity: 0.3;
+            animation: float 10s linear infinite;
+            transform: translateY(100vh);
+        }
+
+        @keyframes float {
+            0% { transform: translateY(100vh) rotate(0deg); }
+            100% { transform: translateY(-100px) rotate(360deg); }
         }
 
         .floating-element img {
