--- a/6c.html
+++ b/6c.html
@@ -1,5 +1,3 @@
-/* Version 2508016A */
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -746,9 +744,12 @@
 
         .team-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 2rem;
             margin-top: 3rem;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .team-card {
@@ -763,6 +764,9 @@
             position: relative;
             overflow: hidden;
             backdrop-filter: blur(10px);
+            cursor: pointer;
+            text-decoration: none;
+            color: inherit;
         }
 
         .team-card:nth-child(even) {
@@ -1031,6 +1035,11 @@
 
             .areas-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .team-grid {
+                grid-template-columns: 1fr;
+                max-width: 400px;
             }
 
             .option-badge {
@@ -1371,26 +1380,26 @@
         <div class="container">
             <h2 class="section-title">The JustClick Team</h2>
             <div class="team-grid">
-                <div class="team-card">
+                <a href="rina.html" class="team-card">
                     <div class="team-photo"><img src="assets/images/rina-photo.jpg" alt="Rina Reinecke" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
                     <h3>Rina Reinecke</h3>
                     <p><strong>Founder & Owner</strong></p>
-                </div>
-                <div class="team-card">
+                </a>
+                <a href="alida.html" class="team-card">
                     <div class="team-photo"><img src="assets/images/alida-photo.jpg" alt="Alida vd Kruk" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
                     <h3>Alida vd Kruk</h3>
                     <p><strong>Senior Educator</strong></p>
-                </div>
-                <div class="team-card">
+                </a>
+                <a href="nadia.html" class="team-card">
                     <div class="team-photo"><img src="assets/images/nadia-photo.jpg" alt="Nadia Scholtz" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
                     <h3>Nadia Scholtz</h3>
                     <p><strong>Educational Specialist</strong></p>
-                </div>
-                <div class="team-card">
-                    <div class="team-photo"><img src="assets/images/random-ai-photo.jpg" alt="Sonja Joubert" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
+                </a>
+                <a href="sonja.html" class="team-card">
+                    <div class="team-photo"><img src="assets/images/sonja-photo.jpg" alt="Sonja Joubert" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
                     <h3>Sonja Joubert</h3>
                     <p><strong>Educator</strong></p>
-                </div>
+                </a>
             </div>
         </div>
     </section>
