--- a/6c.html
+++ b/6c.html
@@ -1203,6 +1203,7 @@
 </head>
 <body>
     <div class="floating-elements">
+        <div class="floating-element"><img src="assets/images/mouse.png" alt="Mouse"></div>
         <div class="floating-element">🎈</div>
         <div class="floating-element">⭐</div>
         <div class="floating-element">🖥️</div>
@@ -1210,7 +1211,6 @@
         <div class="floating-element">🧩</div>
         <div class="floating-element">🖱️</div>
         <div class="floating-element"><img src="assets/images/bgstar.png" alt="Star"></div>
-        <div class="floating-element"><img src="assets/images/bgmouse.png" alt="Mouse"></div>
     </div>
 
 
