--- a/6c.html
+++ b/6c.html
@@ -1209,7 +1209,7 @@
         <div class="floating-element">🖥️</div>
         <div class="floating-element">🖨️</div>
         <div class="floating-element">🧩</div>
-        <div class="floating-element">🖱️</div>
+        <div class="floating-element">💾</div>
         <div class="floating-element"><img src="assets/images/bgstar.png" alt="Star"></div>
     </div>
 
