--- a/6c.html
+++ b/6c.html
@@ -1385,17 +1385,17 @@
                     <h3>Rina Reinecke</h3>
                     <p><strong>Founder & Owner</strong></p>
                 </a>
-                <a href="alida.html" class="team-card">
+                <a href="rina.html" class="team-card">
                     <div class="team-photo"><img src="assets/images/alida-photo.jpg" alt="Alida vd Kruk" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
                     <h3>Alida vd Kruk</h3>
                     <p><strong>Senior Educator</strong></p>
                 </a>
-                <a href="nadia.html" class="team-card">
+                <a href="rina.html" class="team-card">
                     <div class="team-photo"><img src="assets/images/nadia-photo.jpg" alt="Nadia Scholtz" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
                     <h3>Nadia Scholtz</h3>
                     <p><strong>Educational Specialist</strong></p>
                 </a>
-                <a href="sonja.html" class="team-card">
+                <a href="rina.html" class="team-card">
                     <div class="team-photo"><img src="assets/images/sonja-photo.jpg" alt="Sonja Joubert" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;"></div>
                     <h3>Sonja Joubert</h3>
                     <p><strong>Educator</strong></p>
