--- a/rina.html
+++ b/rina.html
@@ -28,7 +28,7 @@
         }
         
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Comic Sans MS', 'Chalkboard SE','Bradley Hand', sans-serif;
             color: #333;
             background: linear-gradient(135deg, #ff4444 0%, #feca57 25%, #4ecdc4 50%, #3742fa 75%, #ff6b6b 100%);
             min-height: 100vh;
