--- a/7a.html
+++ b/7a.html
@@ -1725,25 +1725,24 @@
         // Sponsor Scroller
         document.addEventListener('DOMContentLoaded', function() {
             const sponsors = [
-                "3beertjes.png",
+                "3beertjies.png",
                 "babies-footsteps.jpg",
                 "bigtree.jpg",
                 "bonthuis.png",
                 "bright-beginnings.webp",
                 "bronberg.png",
-                "charisemestre.jpg",
+                "charisemeistre.jpg",
                 "compressed.zip",
                 "cradle-to-crayons.jpg",
                 "curro.png",
                 "dinkydots.webp",
                 "germcure.jpg",
-                "iddles.jpg",
                 "jetline.jpg",
-                "kiddiestatus.png",
+                "kiddiesaurus.png",
                 "kinderdorpie.png",
                 "kleinspoortjies.png",
                 "ladybird.jpg",
-                "lambs.jpg",
+                "littlelambs.jpg",
                 "ls-garsfontein.png"
                 // Add more sponsor image filenames here
             ];
