--- a/7a.html
+++ b/7a.html
@@ -1741,7 +1741,7 @@
                 "kinderdorpie.png",
                 "kleinspoortjies.png",
                 "ladybird.jpg",
-                "littlelambs.jpg",
+                "littlelambs.png",
                 "ls-garsfontein.png"
                 // Add more sponsor image filenames here
             ];
